2001-08-10  Dan Espen  <dane@mk.telcordia.com>

	* index.html: Add menu samples to main page.

	* sample-menus/BlueMarble.fvwmrc:
	* sample-menus/BlueMarble.gif:
	* sample-menus/index.html:
	* sample-menus/weird10dark.xpm:
 	Menu samples.

2001-07-25  Mikhael Goikhman  <migo@homemail.com>

	* index.html:
	restored image-in-center layout, some html clean-up
	* download.html:
	fixed link to manpages

2001-07-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* mod_f2m_communication.html:
	added description for Xinerama

2001-07-17  Dan Espen  <dane@mk.telcordia.com>

	* index.html (Created): Flood is no longer news.
	New streamlined layout.

2001-07-10  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/index.html:
	* generated/manpages/fvwm-config.html:
	added the man page of fvwm-config

2001-07-04  Mikhael Goikhman  <migo@homemail.com>

	* generated/manpages/index.html:
	* generated/index.html:
	renamed from man-pages.html to index.html,
	implemented support for man2html found with man on linux

	* generated/manpages/*.html:
	regenerated, now pages do not have fixed column size, i.e. browser
	resizing is allowed, some more features

2001-07-04  Dan Espen  <dane@mk.telcordia.com>

	* generated/manpages/man-pages.html: Regenerate pages on Linux,
	fvwm2.1 is producing a short synopsis on Sun, HP, AIX.

2001-07-03  Dan Espen  <dane@mk.telcordia.com>

	* generated/manpages/man-pages.html: Bring man pages up to 2.4.0 level.
	Remove FvwmAudio,Config,GoodStuff,Talk.

2001-07-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html:
	* download.html:
	updated for 2.4.0

2001-06-28  olicha  <olivier.chapuis@free.fr>

	* links.html: added a link to fvwm-ewmh

2001-06-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* index.html: fixed latest beta release number

2001-06-22  Dominik Vogt  <dominik.vogt@gmx.de>

	* download.html, index.html: News Flash, download 2.3.33.

2001-06-20  Dan Espen  <dane@mk.telcordia.com>

	* index.html: News about fvwm.org's status.
