@@ -1,3 +1,8 @@
+2001-07-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* mod_f2m_communication.html:
+	updated Xinerama module interface
+
 2001-08-10  Dan Espen  <dane@mk.telcordia.com>
 
 	* index.html: Add menu samples to main page.
